# bytellama

./: README.rst  setup.cfg
bytellama/: builder.py  dataset.py  model.py  tokenizer.py
configs/: bytellama.yaml
recipes/configs/: bytellama.yaml
