[metadata]
name = bytellama
author = Benjamin Kiessling
author_email = mittagessen@l.unchti.me
summary = A tiny llama trained with an octet tokenizer
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Apache
classifier =
        Environment :: Console
        Intended Audience :: Science/Research
	License :: OSI Approved :: Apache Software License
        Operating System :: POSIX
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3.13
	Programming Language :: Python :: 3.14

[files]
packages = bytellama

[flake8]
max_line_length = 160
exclude = tests/*

[entry_points]
console_scripts =
    bytellama = bytellama.model:cli
    bytellama-dataset = bytellama.dataset:cli

[options]
python_requires = >=3.10
install_requires =
    torchtune
    torchao
    datasets
    rich
